--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-transformer-sharp": "^2.5.14",
+    "keen-slider": "^5.2.3",
     "nanoid": "^3.1.12",
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
@@ -54,6 +55,7 @@
     "react-hook-form": "^6.7.2",
     "react-spring": "^8.0.27",
     "tailwindcss": "^1.8.3",
+    "tailwindcss-aspect-ratio": "^3.0.0",
     "typeface-montserrat": "^0.0.75"
   },
   "scripts": {
