header intersection observer try # 1

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.7.2",
+    "react-intersection-observer": "^8.28.5",
     "react-spring": "^8.0.27",
     "tailwindcss": "^1.8.3",
     "tailwindcss-aspect-ratio": "^3.0.0",
