--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-transformer-json": "^2.4.12",
     "gatsby-transformer-sharp": "^2.5.14",
     "keen-slider": "^5.2.3",
     "nanoid": "^3.1.12",
