--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "@reach/dialog": "^0.11.2",
+    "@reach/tabs": "^0.11.2",
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.5.0",
     "autoprefixer": "^9.8.6",
